RESOLVED FIXED105577
DFG shouldn't emit CheckStructure on array accesses if exit profiling tells it not to
https://bugs.webkit.org/show_bug.cgi?id=105577
Summary DFG shouldn't emit CheckStructure on array accesses if exit profiling tells i...
Filip Pizlo
Reported 2012-12-20 14:11:59 PST
Patch forthcoming.
Attachments
the patch (1.54 KB, patch)
2012-12-20 14:12 PST, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2012-12-20 14:12:54 PST
Created attachment 180407 [details] the patch
Mark Hahnenberg
Comment 2 2012-12-20 14:16:06 PST
Comment on attachment 180407 [details] the patch r=me
Filip Pizlo
Comment 3 2012-12-20 14:18:24 PST
Note You need to log in before you can comment on or make changes to this bug.