DFG shouldn't emit CheckStructure on array accesses if exit profiling tells it not to https://bugs.webkit.org/show_bug.cgi?id=105577

Reviewed by Mark Hahnenberg.

I don't know why this wasn't there from the beginning.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::getArrayModeAndEmitChecks):



Canonical link: https://commits.webkit.org/123786@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138300 268f45cc-cd09-0410-ab3c-d52691b4dbfc